# fab-sentinel

./: .mcp.json  CLAUDE.md  README.md  config.py  data_injector.py  insert_anomaly.py  main.py  pyproject.toml  requirements.txt  rules.yaml  setup.sh
.nicegui/: storage-user-19e784d8-0003-41fc-98f2-6b72fda1f331.json
agent/: detection_agent.py  prompts.py  rca_agent.py
alert/: escalation.py  router.py
api/: rca.py  rules.py  system.py
bus/: topic.py
db/: queries.py  schema.sql
detection/: evaluator.py  scheduler.py
lifecycle/: manager.py
rules/: engine.py  loader.py  models.py
simulator/: mes_schema.sql  runner.py  sql_compat.py  sqlite_backend.py
streamlit_app/: api_client.py  app.py
streamlit_app/.streamlit/: config.toml  secrets.toml
