[project]
name = "fab-sentinel"
version = "3.0.0"
description = "FLOPI — FAB AI 이상감지 시스템"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "apscheduler>=3.10",
    "openai>=1.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "nicegui>=3.8",
    "plotly>=5.24",
    "pandas>=2.2",
]

[project.optional-dependencies]
oracle = ["oracledb>=2.0"]

[project.scripts]
fab-anomaly = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
